--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
